# Strangevis-14

./: .gitignore  CMakeLists.txt  application.cpp  application.h  build.bat  conanfile.txt  cube-fs.glsl  cube-vs.glsl  cubeplaneintersection.cpp  cubeplaneintersection.h  environment.cpp  environment.h  geometry.cpp  geometry.h  main.cpp  mainwindow.cpp  mainwindow.h  readme.md  rectangulargridlayout.cpp  renderwidget.cpp  renderwidget.h  shaders.qrc  texturestore.cpp  texturestore.h  transferfunction.cpp  transferfunction.h  transfertexture.cpp  transfertexture.h  volume.cpp  volume.h
geometry/: box.cpp  box.h  cube.cpp  cube.h  cubeplaneintersection.cpp  cubeplaneintersection.h  edge.cpp  edge.h  plane.cpp  plane.h  quad.cpp  quad.h  utils.cpp  utils.h
properties/: cameraproperties.cpp  cameraproperties.h  clippingplaneproperties.cpp  clippingplaneproperties.h  gradientproperties.cpp  gradientproperties.h  rendersettingsproperties.cpp  rendersettingsproperties.h  sharedproperties.cpp  sharedproperties.h  slicingplaneproperties.cpp  slicingplaneproperties.h  transferproperties.cpp  transferproperties.h  viewport.h
renderers/: imguizmorenderer.cpp  imguizmorenderer.h  lightrenderer.cpp  lightrenderer.h  obliqueslicewidget.cpp  obliqueslicewidget.h  planerenderer.cpp  planerenderer.h  raycastingwidget.cpp  raycastingwidget.h  slicingplanecontrols.cpp  slicingplanecontrols.h  volumerenderer.cpp  volumerenderer.h
res/: cmaps.xml
shaders/: cube-fs.glsl  cube-vs.glsl  light-fs.glsl  light-vs.glsl  plane-fs.glsl  plane-vs.glsl  slice-fs.glsl  slice-vs.glsl
tests/: CMakeLists.txt  edge.cpp  geometry.cpp
ui/: histogramwidget.cpp  histogramwidget.h  lightcontrolsettingswidget.cpp  lightcontrolsettingswidget.h  mainwindowwidget.cpp  mainwindowwidget.h  obliquesliceinteractor.cpp  obliquesliceinteractor.h  obliqueslicewidget.cpp  obliqueslicewidget.h  orthogonalslicewidget.cpp  orthogonalslicewidget.h  parameterwidget.cpp  parameterwidget.h  rectangulargridlayout.cpp  rectangulargridlayout.h  rendersettingswidget.cpp  rendersettingswidget.h  renderwidget.cpp  renderwidget.h  transferfunctiongraph.cpp  transferfunctiongraph.h  transferfunctionwidget.cpp  transferfunctionwidget.h
ui/transferwidget/: hintitem.cpp  hintitem.h  splinecontrolseries.cpp  splinecontrolseries.h  transferfunctiongraph.cpp  transferfunctiongraph.h  transferfunctionwidget.cpp  transferfunctionwidget.h
